--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_uredi_destinacijo"
     android:layout_width="match_parent"
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinnerDnevi"
         android:spinnerMode="dialog"
-        android:entries="@array/postaje"
+        android:entries="@array/ure"
         android:layout_below="@+id/iztopnaPostaja"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
