Izbira dneva spinner

--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -32,11 +32,32 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerDnevi"
+        android:id="@+id/spinnerUre"
         android:spinnerMode="dialog"
         android:entries="@array/ure"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="96dp" />
+
+    <TextView
+        android:text="@string/strigDnevi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/iztopnaPostaja"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:id="@+id/dnevi" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dnevi"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="7dp"
+        android:id="@+id/spinnerDnevi"
+        android:entries="@array/dnevi"/>
 
 </RelativeLayout>
