activity uredi destinacijo - manjka buttonKoncaj onClick koncajDestinacijo

--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -57,7 +57,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/buttonKoncaj"
-        tools:ignore="RelativeOverlap" />
+        tools:ignore="RelativeOverlap"
+        android:onClick="koncajDestinacijo"/>
 
     <Button
         android:text="@string/buttonPreklici"
