--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -70,4 +70,16 @@
         android:id="@+id/buttonPreklici"
         android:onClick="getBackMain"/>
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewUre"
+        android:layout_alignRight="@+id/buttonPreklici"
+        android:layout_alignEnd="@+id/buttonPreklici"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginTop="63dp"
+        android:id="@+id/textViewTest" />
+
 </RelativeLayout>
