--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -56,7 +56,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/btn_add"
+        android:id="@+id/buttonKoncaj"
         tools:ignore="RelativeOverlap"
         android:onClick="koncajDestinacijo"/>
 
