pomnenje programsko dodajanje gumbov

--- a/app/src/main/res/layout/destination_list.xml
+++ b/app/src/main/res/layout/destination_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonDestionation"
-        android:layout_weight="1" />
+        android:layout_weight="1.91" />
 
     <Switch
         android:layout_width="wrap_content"
@@ -22,5 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_delete"
-        android:id="@+id/imgButtonDelete" />
+        android:id="@+id/imgButtonDelete"
+        android:onClick="removeDestination"/>
 </LinearLayout>
