pomnenje programsko dodajanje gumbov

--- a/app/src/main/res/layout/destination_list.xml
+++ b/app/src/main/res/layout/destination_list.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/destinationList">
 
 
     <Button
@@ -10,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonDestionation"
-        android:layout_weight="1.91" />
+        android:layout_weight="1.91"
+        android:onClick="removeDestination"/>
 
     <Switch
         android:layout_width="wrap_content"
