novi preurejen array adapter

--- a/app/src/main/res/layout/activity_uredi_destinacijo.xml
+++ b/app/src/main/res/layout/activity_uredi_destinacijo.xml
@@ -68,6 +68,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/buttonPreklici"
-        android:onClick="getBackMain"/>
+        android:onClick="goBackMain"/>
 
 </RelativeLayout>
