--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,14 @@
     tools:context="com.sveval.wakeup.MainActivity">
 
     <include
-        android:id="@+id/tool_bar"
-        layout="@layout/tool_bar" />
+        android:id="@+id/toolbar"
+        layout="@layout/tool_bar"
+        ></include>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        android:layout_below="@+id/tool_bar"/>
+        android:layout_below="@+id/toolbar"/>
 
 </RelativeLayout>
