--- a/app/src/main/res/layout/destination_list.xml
+++ b/app/src/main/res/layout/destination_list.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonDestionation"
-        android:layout_weight="1.91"
-        android:onClick="removeDestination"/>
+        android:layout_weight="1.91" />
 
     <Switch
         android:layout_width="wrap_content"
